[gd_scene load_steps=40 format=3 uid="uid://fw6y1aaluwpv"]

[ext_resource type="Script" uid="uid://cyhaw1qyjtrhn" path="res://blisscode/character/character_controller.gd" id="1_jywxx"]
[ext_resource type="Resource" uid="uid://bpvocg3gjelfh" path="res://scenes/characters/player/character_data/player_platformer.tres" id="2_do2kk"]
[ext_resource type="Script" uid="uid://d2lsy2pdynjo3" path="res://blisscode/character/controls/player_controls.gd" id="3_r6wku"]
[ext_resource type="Shader" uid="uid://mt14v4fja677" path="res://blisscode/shaders/teleport.gdshader" id="4_8kth0"]
[ext_resource type="SpriteFrames" uid="uid://dynlf04grls35" path="res://assets/img/characters/platformer-16x16.res" id="4_do2kk"]
[ext_resource type="Script" uid="uid://b0mjv3yqikegv" path="res://blisscode/character/hitbox.gd" id="5_ngigd"]
[ext_resource type="Script" uid="uid://0vge3j1r1s0n" path="res://blisscode/character/animation/animated_sprite_facing_direction.gd" id="5_rifkl"]
[ext_resource type="PackedScene" uid="uid://qduhqb6f8ovy" path="res://scenes/characters/ui/character_points_bar.tscn" id="6_rifkl"]
[ext_resource type="PackedScene" uid="uid://c37f3qdvli5sr" path="res://blisscode/character/alignment/alignment.tscn" id="7_214a0"]
[ext_resource type="Script" uid="uid://c30av3xht06qh" path="res://blisscode/character/debug_label.gd" id="8_8kth0"]
[ext_resource type="Texture2D" uid="uid://yfinwvdrgjhy" path="res://assets/img/ui/icons/red-arrow.png" id="9_ciexm"]
[ext_resource type="Texture2D" uid="uid://iy021d8gnrks" path="res://assets/img/cursors/crosshairs.png" id="10_wcj4n"]
[ext_resource type="Texture2D" uid="uid://bxqd1qybg36cl" path="res://assets/img/cursors/circle.png" id="11_bavp1"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="12_i2drd"]
[ext_resource type="Script" uid="uid://bti4mwhmm58cm" path="res://blisscode/state_machine/states/platformer_state_machine.gd" id="13_jywxx"]
[ext_resource type="Script" uid="uid://chigi4pyju8x5" path="res://scenes/characters/player/player_camera.gd" id="13_wxkt1"]
[ext_resource type="Script" uid="uid://c3rd0mfca06gc" path="res://blisscode/state_machine/states/spawn_state.gd" id="15_214a0"]
[ext_resource type="Script" uid="uid://bnn0ai7ycx13p" path="res://blisscode/state_machine/states/dash_state.gd" id="16_iejn7"]
[ext_resource type="Script" uid="uid://dqeisjnkkturo" path="res://blisscode/state_machine/states/idle_state.gd" id="17_i2drd"]
[ext_resource type="Texture2D" uid="uid://dl5ed1afrnnhn" path="res://assets/img/masks/LightMask.png" id="17_xne5e"]
[ext_resource type="Script" uid="uid://8lo347gc3bwp" path="res://blisscode/state_machine/states/jump_state.gd" id="18_ciexm"]
[ext_resource type="Script" uid="uid://cutl0tw1jj08w" path="res://blisscode/state_machine/states/walk_state.gd" id="18_nwvv8"]
[ext_resource type="Script" uid="uid://qa0dobmwpw5o" path="res://blisscode/state_machine/states/run_state.gd" id="19_3eno5"]
[ext_resource type="Script" uid="uid://crvvlkigmoam5" path="res://blisscode/state_machine/states/death_state.gd" id="19_8kth0"]
[ext_resource type="Script" uid="uid://cjqdbfekfsfa0" path="res://blisscode/state_machine/states/falling_state.gd" id="19_wcj4n"]
[ext_resource type="Script" uid="uid://dbt5kmkhjpnf3" path="res://blisscode/state_machine/states/land_state.gd" id="20_bavp1"]
[ext_resource type="Script" uid="uid://cv887a08k4env" path="res://blisscode/state_machine/states/jump_flip_state.gd" id="21_3eno5"]
[ext_resource type="Script" uid="uid://bu0p0lqos7mk" path="res://blisscode/state_machine/states/attack_state.gd" id="22_i2drd"]
[ext_resource type="Script" uid="uid://bof7671wkkqnu" path="res://blisscode/state_machine/states/wall_cling_state.gd" id="24_l1x7x"]
[ext_resource type="Script" uid="uid://boa3aj1iefxc0" path="res://blisscode/state_machine/states/wall_jump_state.gd" id="25_ngigd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8kth0"]
shader = ExtResource("4_8kth0")
shader_parameter/progress = 1.0
shader_parameter/noise_desnity = 60.0
shader_parameter/beam_size = 0.0
shader_parameter/color = Vector4(0, 1.02, 1.2, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wocps"]
size = Vector2(5, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1x7x"]
size = Vector2(9, 9)

[sub_resource type="Animation" id="Animation_bavp1"]
resource_name = "Death"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.07, -0.16666667, -0.009500001, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_ngigd"]
resource_name = "Kick"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Kick", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_l1x7x"]
resource_name = "Punch"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Punch", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_wcj4n"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ciexm"]
resource_name = "Spawn"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.057000004, -0.16666667, -0.009500001, 0, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i2drd"]
_data = {
&"Death": SubResource("Animation_bavp1"),
&"Kick": SubResource("Animation_ngigd"),
&"Punch": SubResource("Animation_l1x7x"),
&"RESET": SubResource("Animation_wcj4n"),
&"Spawn": SubResource("Animation_ciexm")
}

[node name="PlayerSide" type="CharacterBody2D" node_paths=PackedStringArray("controls") groups=["persist", "player"]]
material = SubResource("ShaderMaterial_8kth0")
collision_mask = 260
script = ExtResource("1_jywxx")
character = ExtResource("2_do2kk")
controls = NodePath("PlayerControls")

[node name="PlayerControls" type="Node" parent="." node_paths=PackedStringArray("state_machine", "aim_sprite", "touch_sprite")]
script = ExtResource("3_r6wku")
state_machine = NodePath("../PlatformerStateMachine")
aim_sprite = NodePath("../Crosshairs")
touch_sprite = NodePath("../TouchCircle")
metadata/_custom_type_script = "uid://d2lsy2pdynjo3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_wocps")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("animated_sprite")]
collision_layer = 512
collision_mask = 1028
script = ExtResource("5_ngigd")
facing_left_position = Vector2(-17, 0)
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(9.5, 5.5)
shape = SubResource("RectangleShape2D_l1x7x")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = ExtResource("4_do2kk")
animation = &"Idle"
offset = Vector2(1.125, 4.15)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i2drd")
}

[node name="AnimatedSpriteFacingDirection" type="Node2D" parent="." node_paths=PackedStringArray("agent", "animated_sprite")]
script = ExtResource("5_rifkl")
agent = NodePath("..")
animated_sprite = NodePath("../AnimatedSprite2D")
flip_offset = Vector2(1.125, 8.15)
metadata/_custom_type_script = "uid://0vge3j1r1s0n"

[node name="CharacterPointsBar" parent="." instance=ExtResource("6_rifkl")]
visible = false
offset_top = -29.0
offset_bottom = 11.0

[node name="Alignment" parent="." instance=ExtResource("7_214a0")]
visible = false
position = Vector2(-10, -23)

[node name="DebugLabel" type="Label" parent="." node_paths=PackedStringArray("controls", "state_machine")]
offset_left = -10.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = -8.0
theme_override_constants/line_spacing = -9
theme_override_font_sizes/font_size = 16
text = "Position"
script = ExtResource("8_8kth0")
controls = NodePath("../PlayerControls")
state_machine = NodePath("../PlatformerStateMachine")

[node name="DirectionArrow" type="TextureRect" parent="."]
visible = false
offset_left = 23.0
offset_top = -9.0
offset_right = 39.0
offset_bottom = 7.0
texture = ExtResource("9_ciexm")

[node name="Crosshairs" type="Sprite2D" parent="."]
position = Vector2(61, 0)
texture = ExtResource("10_wcj4n")

[node name="TouchCircle" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("11_bavp1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 4
layer = 30
visible = false

[node name="Move Virtual Joystick" parent="CanvasLayer" instance=ExtResource("12_i2drd")]
offset_left = 25.0
offset_top = -70.0
offset_right = 123.0
offset_bottom = 9.0
scale = Vector2(0.5, 0.5)
clampzone_size = 25.0
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Aim Virtual Joystick" parent="CanvasLayer" instance=ExtResource("12_i2drd")]
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_top = -71.0
offset_right = 24.0
offset_bottom = 8.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
clampzone_size = 25.0
action_left = "aim_left"
action_right = "aim_right"
action_up = "aim_up"
action_down = "aim_down"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 2000
limit_bottom = 1000
position_smoothing_enabled = true
script = ExtResource("13_wxkt1")

[node name="PlatformerStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "initial_state", "idle_state")]
script = ExtResource("13_jywxx")
character = NodePath("..")
initial_state = NodePath("SpawnState")
idle_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://bti4mwhmm58cm"

[node name="SpawnState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("15_214a0")
animation_name = "Spawn"
wait_for_animation_finished = true
use_animated_sprite = false
dispatch_state = "spawn"
metadata/_custom_type_script = "uid://c3rd0mfca06gc"

[node name="IdleState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("17_i2drd")
animation_name = "Idle"
metadata/_custom_type_script = "uid://dqeisjnkkturo"

[node name="WalkState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("18_nwvv8")
animation_name = "Walk"
metadata/_custom_type_script = "uid://cutl0tw1jj08w"

[node name="RunState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("19_3eno5")
animation_name = "Run"
metadata/_custom_type_script = "uid://qa0dobmwpw5o"

[node name="JumpState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("18_ciexm")
animation_name = "Jump"
metadata/_custom_type_script = "uid://8lo347gc3bwp"

[node name="JumpFlipState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("21_3eno5")
animation_name = "Jump Flip"
metadata/_custom_type_script = "uid://cv887a08k4env"

[node name="FallingState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("19_wcj4n")
animation_name = "Fall"
metadata/_custom_type_script = "uid://cjqdbfekfsfa0"

[node name="LandState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("20_bavp1")
animation_name = "Land"
wait_for_animation_finished = true
dispatch_state = "idle"
metadata/_custom_type_script = "uid://dbt5kmkhjpnf3"

[node name="WallClingState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("24_l1x7x")
animation_name = "Wall Cling"
metadata/_custom_type_script = "uid://bof7671wkkqnu"

[node name="WallJumpState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("25_ngigd")
animation_name = "Wall Jump"
metadata/_custom_type_script = "uid://boa3aj1iefxc0"

[node name="DashState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("16_iejn7")
animation_name = "Dash"
metadata/_custom_type_script = "uid://bnn0ai7ycx13p"

[node name="AttackState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("22_i2drd")
left_hand_attack_animation = "Punch"
right_hand_attack_animation = "Kick"
play_on_enter = false
use_animated_sprite = false
metadata/_custom_type_script = "uid://bu0p0lqos7mk"

[node name="DeathState" type="Node" parent="PlatformerStateMachine"]
script = ExtResource("19_8kth0")
metadata/_custom_type_script = "uid://crvvlkigmoam5"

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 2.0
shadow_enabled = true
texture = ExtResource("17_xne5e")
texture_scale = 5.0
